worker/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80  
  type: ClusterIP
